# betterssb

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: auth.py  chatbot.py  degree.py  rmp.py  schedule.py  transcript.py
backend/app/core/: auth.py  config.py  deps.py  security.py
backend/app/domains/auth/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/domains/chatbot/: router.py  schemas.py  service.py
backend/app/domains/degree/: router.py  schemas.py  service.py
backend/app/domains/rmp/: router.py  schemas.py  service.py
backend/app/domains/schedule/: router.py  schemas.py  service.py
backend/app/domains/transcript/: router.py  schemas.py  service.py
backend/app/integrations/google/: client.py
backend/app/integrations/openai/: client.py
backend/app/integrations/rmp/: client.py
backend/app/models/: __init__.py  course.py  professor.py  schedule.py  transcript.py
backend/app/services/: auth_service.py  bulletin_parser.py  chatbot_service.py  rmp_service.py  schedule_service.py  transcript_service.py
backend/app/shared/schemas/: base.py
backend/tests/: conftest.py
backend/tests/fixtures/: bulletin_cs_bs.html  bulletin_cybr_bs.html
backend/tests/integration/: test_api.py
backend/tests/unit/: test_bulletin_parser.py  test_models.py  test_schedule_service.py  test_security.py  test_transcript_service.py  test_user_model.py
ellucian-api/: pyproject.toml
ellucian-api/app/: main.py  models.py  sample_data.py
ellucian-api/app/routers/: class_registration.py  contact.py  course_search.py  navigation.py  plan_ahead.py  registration_history.py  section_details.py  section_search.py  terms.py
frontend/: README.md  addcrnregistration and batch error result.har  addcrnregistration and batch perfect result.har  package.json  (+3 more)
(+53 files in other folders)
